# Hooray

./: CMakeLists.txt  main.cpp  ray_tracing.odt  readme.md  scene1.ssf
src/: bitmap.cpp  bitmap.h  exp.cpp  exp.h  light_source.cpp  light_source.h  object.cpp  object.h  ray.cpp  ray.h  rgb.cpp  rgb.h  rgba.cpp  rgba.h  scene.cpp  scene.h  triangle.cpp  triangle.h  ui.cpp  ui.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h
